--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.meta.xr.sdk.all": "69.0.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
@@ -17,7 +18,6 @@
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.interaction.toolkit": "2.5.4",
     "com.unity.xr.oculus": "4.2.0",
-    "com.unity.xr.openxr": "1.10.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
