--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.memoryprofiler": "1.1.3",
     "com.unity.purchasing": "4.10.0",
     "com.unity.render-pipelines.universal": "16.0.5",
     "com.unity.test-framework": "1.3.9",
