--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.timeline": "1.8.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
+    "com.unity.visualeffectgraph": "16.0.5",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.xr.hands": "1.3.0",
     "com.unity.xr.interaction.toolkit": "2.5.4",
