--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.memoryprofiler": "1.1.3",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.purchasing": "4.10.0",
     "com.unity.recorder": "5.0.0",
     "com.unity.render-pipelines.universal": "16.0.5",
